--- a/blog/templates/blog/base.html
+++ b/blog/templates/blog/base.html
@@ -4,15 +4,18 @@
   
   <head>
     <title>RED SKY BLOG</title>
-    <link href="https://fonts.googleapis.com/css?family=Gothic+A1" rel="stylesheet">
     <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css">
     <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap-theme.min.css">
+    <link href="https://fonts.googleapis.com/css?family=Gothic+A1" rel="stylesheet">
     <link rel="stylesheet" href="{% static 'css/blog.css' %}">
   </head>
 
   <body>
     <div class="page-header">
-        <h1><a href="/">Red Sky Blog</a></h1>
+      {% if user.is_authenticated %}
+      <a href="{% url 'post_new' %}" class="top-menu"><span class="glyphicon glyphicon-plus"></span></a>
+      {% endif  %}
+      <h1><a href="/">Red Sky Blog</a></h1>
     </div>
     <div class="content container">
         <div class="row">
