--- a/blog/templates/blog/post_list.html
+++ b/blog/templates/blog/post_list.html
@@ -22,9 +22,13 @@
     <div class="date">
       <p>{{ post.published_date }}</p>
     </div>
+
     <h1><a href="{% url 'post_detail' pk=post.pk %}">{{ post.title }}</a></h1>
     <p>{{ post.text|linebreaksbr }}</p>
-  </div>
+    <a href="{% url 'post_detail' pk=post.pk %}">Comments: {{ post.approved_comments.count }}</a>
+
+
+</div>
   {% endfor %}
   {% endblock %}
 
